[workspace]
members = [
    "crates/lib/raven-engine",

    "crates/bin/sandbox",
]

# include lib package here to bring cargo test into the whole virtual manifest
default-members = [
    "crates/bin/sandbox",

    "crates/lib/raven-engine",
    "crates/lib/raven-core",
    "crates/lib/raven-reflect",
    "crates/lib/raven-rhi",
    "crates/lib/raven-rg",
    "crates/lib/raven-render",
]