[package]
name = "raven-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.0"  # error lib
log = "0.4"       # logging lib
fern = { version = "0.6", features = ["colored"] }      # logging lib
chrono = "0.4"
structopt = "0.3.0"
num_cpus = "1.13.1" # get the number of cores of current cpu
# lazy_static = "1.4.0"
# mut_static = "5.0.0"
# thread_local = "1.1.4"