[package]
name = "raven-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
raven-core = { path = "../../lib/raven-core/" }
raven-rhi = { path = "../../lib/raven-rhi/" }
raven-rg = { path = "../../lib/raven-rg/" }

anyhow = "1.0.0"  # error lib
log = "0.4"       # logging lib

# Temporary
ash = "0.33.0"

smol = "1.2.0"
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "540964c" }
memmap2 = "0.5.0"
