[package]
name = "raven-engine"
version = "0.1.0"
edition = "2021"

[features]
gpu_ray_tracing = ["raven-facade/gpu_ray_tracing"]

dynamic_linking = ["raven-dylib"]

[dependencies]
# Force dynamic linking
# See https://doc.rust-lang.org/reference/linkage.html
raven-dylib  = { path = "../../lib/raven-dylib/", default-features = false, optional = true }
raven-facade = { path = "../../lib/raven-facade/", default-features = false }

log = "0.4.17"
winit = "0.27.5"
anyhow = "1.0.68"