[package]
name = "raven-facade"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "default_core_api",
    "default_input_api",
    "default_render_api",
    "default_asset_api",
]

default_core_api = []
default_input_api = []
default_asset_api = []
default_render_api = ["default_core_api"]

gpu_ray_tracing = [
    "raven-rhi/gpu_ray_tracing",
    "raven-rg/gpu_ray_tracing",
    "raven-render/gpu_ray_tracing"
]

[dependencies]
raven-thread     = { path = "../../lib/raven-thread/" }
raven-scene      = { path = "../../lib/raven-scene/" }
raven-input      = { path = "../../lib/raven-input/" }
raven-container  = { path = "../../lib/raven-container/" }

raven-log        = { path = "../../lib/raven-log/" }
raven-math       = { path = "../../lib/raven-math/" }
raven-asset      = { path = "../../lib/raven-asset/" }
raven-filesystem = { path = "../../lib/raven-filesystem/" }
raven-core       = { path = "../../lib/raven-core/" }
raven-reflect    = { path = "../../lib/raven-reflect/" }
raven-rhi        = { path = "../../lib/raven-rhi/" }
raven-rg         = { path = "../../lib/raven-rg/" }
raven-render     = { path = "../../lib/raven-render/" }

# error lib
anyhow = "1.0.0"

# Input api dependencies
parking_lot = "0.12.1"
lazy_static = "1.4.0"

# Core api dependencies
winit = "0.27.5"