[package]
name = "raven-filesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
hotwatch = "0.4.6"
lazy_static = "1.4.0"
parking_lot = "0.12.1"

# May write our own on-demand computing library
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "540964c" }