[package]
name = "raven-reflect"
version = "0.1.0"
edition = "2021"

[dependencies]
raven-reflect-derive = { path = "raven-reflect-derive" }

raven-core = { path = "../../lib/raven-core" }

syn = { version = "1.0" }

anyhow = "1.0.0"  # error lib
thiserror = "1.0.0"
log = "0.4"       # logging lib

downcast-rs = "1.2.0"

# More compact and efficient implementations of the standard synchronization primitives.
parking_lot = "0.12.0"
once_cell = "1.15.0"

serde = "1.0.152"
erased-serde = "0.3.24"

wyhash = "0.5.0"

[dev-dependencies]
ron = "0.8.0"
