[package]
name = "raven-render"
version = "0.1.0"
edition = "2021"

[dependencies]
raven-core =  { path = "../../lib/raven-core/" }
raven-rg   =  { path = "../../lib/raven-rg/" }
raven-rhi  = { path = "../../lib/raven-rhi/" }

log = "0.4"       # logging lib

once_cell = "1.15.0"

# Strictly speaking, this should not be here, this should only be in RHI layer!
ash = "0.33.0"
rspirv-reflect = "0.7.0"

# math
glam = "0.21.0"