[package]
name = "raven-render"
version = "0.1.0"
edition = "2021"

[features]
gpu_ray_tracing = []

[dependencies]
raven-container = { path = "../../lib/raven-container/" }
raven-math      = { path = "../../lib/raven-math/" }
raven-scene     = { path = "../../lib/raven-scene/" }
raven-asset     = { path = "../../lib/raven-asset/" }
raven-rg        = { path = "../../lib/raven-rg/" }
raven-rhi       = { path = "../../lib/raven-rhi/" }

log = "0.4"       # logging lib

once_cell = "1.15.0"
# More compact and efficient implementations of the standard synchronization primitives.
bytemuck = "1.12.0"

# Strictly speaking, this should not be here, this should only be in RHI layer!
ash = "0.33.0"
rspirv-reflect = "0.7.0"