[package]
name = "raven-rg"
version = "0.1.0"
edition = "2021"

[dependencies]
raven-rhi = { path = "../../lib/raven-rhi/" }
anyhow = "1.0.0"  # error lib
log = "0.4"       # logging lib

arrayvec = "0.7.0"

# May write our own on-demand computing library
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "540964c" }

ash = "0.33.0"
lazy_static = "1.4.0"
vk-sync = { git = "https://github.com/gwihlidal/vk-sync-rs", rev = "496dbbc" }