[package]
name = "raven-rg"
version = "0.1.0"
edition = "2021"

[dependencies]
raven-core = { path = "../../lib/raven-core/" }
raven-rhi  = { path = "../../lib/raven-rhi/" }
anyhow = "1.0.0"  # error lib
log = "0.4"       # logging lib

arrayvec = "0.7.0"

# May write our own on-demand computing library
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "540964c" }

once_cell = "1.15.0"

# Strictly speaking, this should not be here, this should only be in RHI layer!
ash = "0.33.0"
lazy_static = "1.4.0"
vk-sync = { git = "https://github.com/gwihlidal/vk-sync-rs", rev = "496dbbc" }
rspirv-reflect = "0.7.0"