[package]
name = "raven-rhi"
version = "0.1.0"
edition = "2021"

[features]
gpu_ray_tracing = []

[dependencies]
raven-math       = { path = "../../lib/raven-math/" }
raven-container  = { path = "../../lib/raven-container/" }
raven-filesystem = { path = "../../lib/raven-filesystem/" }
raven-thread     = { path = "../../lib/raven-thread/" }

thiserror = "1.0.38"
anyhow = "1.0.0"  # error lib
log = "0.4"       # logging lib

# should this be removed?
failure = "0.1.8"

winit = "0.27.5"
winapi = "0.3.9"
bytes = "1.2.0"
# relative-path = "1.7.0"
smol = "1.2.0"
futures = "0.3.0"

# More compact and efficient implementations of the standard synchronization primitives.
parking_lot = "0.12.0"

arrayvec = "0.7.0"
byte-slice-cast = "1.2.0"
derive_builder = "0.11.0"

# May write our own on-demand computing library
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "540964c" }

once_cell = "1.15.0"

# vulkan
ash = "0.33"
gpu-allocator = "0.11.0"
vk-sync = { git = "https://github.com/gwihlidal/vk-sync-rs", rev = "496dbbc" }

hassle-rs = { git = "https://github.com/CrystaLamb/hassle-rs.git", rev = "0d50d58" }
shader-prepper = "0.2.0"
rspirv-reflect = "0.7.0"